Fixed <DateRangePicker> panel collapse issue.

--- a/src/DateRangePicker/styles/common.less
+++ b/src/DateRangePicker/styles/common.less
@@ -59,4 +59,6 @@
 // Calendar group
 .@{drpns}-calendar-group {
   height: 274px;
+  // Make sure group wrapper can put 2 date-panels even screen width is not enough.
+  min-width: 510px;
 }
